--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,10 @@
 @import "reset.css";
 @import "variables.css";
 
-/* screen */
+/* components <- 모든 페이지에서 사용되는 것 */
+@import "components/status-bar.css";
+
+/* screen <- 해당 페이지에서만 사용되는 것 */
 @import "screens/login.css";
 
 /* Document level adjustments */
