--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 
 /* components <- 모든 페이지에서 사용되는 것 */
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
 
 /* screen <- 해당 페이지에서만 사용되는 것 */
 @import "screens/login.css";
@@ -29,4 +30,9 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
