--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 
 /* screen <- 해당 페이지에서만 사용되는 것 */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 /* Document level adjustments */
 @media (max-width: 56.25rem) {
@@ -31,6 +32,7 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+  color: #2e363e;
 }
 
 a {
