fix: friends.html - user-component 구조 다시 잡음 / charts.html 기본 구조 잡음

--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,3 +1,8 @@
+.user-component {
+  display: flex;
+  justify-content: space-between;
+}
+
 .user-component__column {
   display: flex;
   align-items: center;
@@ -15,12 +20,6 @@
   height: 4.286em;
   border-radius: 1.071em;
   margin-right: 1.071em;
-}
-
-.user-component__text {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
 }
 
 .user-component__title {
