--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
 /* screen <- 해당 페이지에서만 사용되는 것 */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/chats.css";
 
 /* Document level adjustments */
 @media (max-width: 56.25rem) {
