--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,13 +18,13 @@
 }
 
 .nav__notification {
+  background-color: tomato;
   position: absolute;
   right: -0.214em;
   top: -0.857em;
   width: 1.071em;
   height: 1.071em;
   border-radius: 50%;
-  background-color: crimson;
   text-align: center;
   line-height: 1.071em;
   font-weight: bold;
