--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,11 +1,19 @@
 .user-component {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 2.143em;
 }
 
-.user-component__column {
+.user-component__column:first-child {
   display: flex;
   align-items: center;
+}
+
+.user-component__column:nth-child(2) {
+  /* :last-child로 하면 꼬이게 된다. 주의하자 */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .user-component__avatar {
@@ -25,6 +33,7 @@
 .user-component__title {
   font-weight: bold;
   font-size: 1.571em;
+  margin-bottom: 0.471em;
 }
 
 .user-component__title--not-bold {
@@ -34,5 +43,8 @@
 .user-component__subtitle {
   font-size: 1.214em;
   color: rgba(0, 0, 0, 0.5);
-  margin-top: 0.471em;
+}
+
+.user-component__time {
+  margin-bottom: 0.643em;
 }
