--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/chats.css";
+@import "screens/find.css";
 
 /* Document level adjustments */
 @media (max-width: 56.25rem) {
