--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -16,3 +16,22 @@
   font-size: 2.5em;
   margin-bottom: 0.514em;
 }
+
+.recommended-friends {
+  border-bottom: var(--main-border);
+  margin-bottom: 2.143em;
+}
+
+.recommended-friends__title {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.recommended-friends span {
+  display: block;
+  text-align: center;
+  line-height: 25em;
+  height: 25em;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.5);
+}
