--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -35,7 +35,7 @@
   font-size: 1em;
   outline: none;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: var(--main-border);
   padding: 1.4em 0;
   transition: border-color 0.3s ease-in-out;
   cursor: pointer;
