--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 @import "screens/friends.css";
 @import "screens/chats.css";
 @import "screens/find.css";
+@import "screens/more.css";
 
 /* Document level adjustments */
 @media (max-width: 56.25rem) {
