--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,17 @@
 @import "screens/chats.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/settings.css";
 
 /* Document level adjustments */
 @media (max-width: 56.25rem) {
+  /* 16 * 56.25 = 900px */
   html {
     font-size: 14px;
   }
 }
 @media (max-width: 25rem) {
+  /* 16 * 25 = 400px */
   html {
     font-size: 12px;
   }
