--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
 @import "screens/find.css";
 @import "screens/more.css";
 @import "screens/settings.css";
+@import "screens/chat.css";
 
 /* Document level adjustments */
 @media (max-width: 56.25rem) {
