update: chat.html - form 추가

--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -111,3 +111,63 @@
 .message-row--own .message__info {
   flex-direction: row-reverse;
 }
+
+/* input */
+.reply {
+  position: fixed;
+  padding: 0.357em 1.786em;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.reply .reply__column:first-child {
+  width: 10%;
+}
+.reply .reply__column:last-child {
+  width: 90%;
+  position: relative;
+}
+
+.reply i {
+  opacity: 0.5;
+}
+
+.reply input {
+  padding: 1em;
+  width: 100%;
+  border: var(--main-border);
+  border-radius: 1.786em;
+}
+
+.reply__column:last-child > i,
+.reply__column:last-child button {
+  position: absolute;
+  right: 0.214em;
+  top: 0.214em;
+}
+
+.reply__column:last-child > i {
+  right: 3.571em;
+  top: 1.071em;
+}
+
+.reply__column button {
+  background-color: var(--yellow);
+  border: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.reply__column button i {
+  opacity: 1;
+}
+
+.reply__column button:focus,
+.reply__column button:active {
+  outline: none;
+}
