--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -17,16 +17,51 @@
   position: relative;
 }
 
-.nav__notification {
+.nav__item .nav__notification {
+  /* 우선순위를 줘야 badge 값을 덮을 수 있음. */
   background-color: tomato;
   position: absolute;
-  right: -0.214em;
-  top: -0.857em;
-  width: 1.071em;
-  height: 1.071em;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 1.071em;
-  font-weight: bold;
-  color: white;
+  left: 1.071em;
+  bottom: 1.071em;
+  width: 1.786em;
+  height: 1.786em;
+  animation: notificationAnimation 2s ease-in-out infinite;
+}
+
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(360deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
+.nav__item {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+
+.nav__item:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav__item:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.nav__item:last-child {
+  animation-delay: 0.4s;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
 }
