--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -17,3 +17,16 @@
 .screen-header__icon {
   margin-left: 1.786em;
 }
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 1s linear infinite;
+}
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
